feat: streamline forest deployment and remove legacy modules